--- a/index.html
+++ b/index.html
@@ -31,24 +31,26 @@
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
         <nav class="navbar row">
-            <div class="navbar-header">
+            <div role="navigationBar" class="navbar-header" aria-label="Navigation">
             <a class="navbar-brand" href="index.html"
                 ><img
                 src="img/la-chouette-agence.png"
                 alt="Bannière - La chouette Agence"
                 height="40"
             /></a>
-            <button
+            <button 
                 id="nav-toggle"
                 type="button"
                 class="ui-navbar-toggle navbar-toggle"
                 data-toggle="collapse"
                 data-target=".navbar-1"
+		aria-label="navigation toogle"
             >
                 <span class="sr-only">Toggle navigation</span
                 ><span class="icon-bar"></span><span class="icon-bar"></span
                 ><span class="icon-bar"></span>
             </button>
+
             </div>
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
             <ul class="site-navigation nav navbar-nav">
