--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
         <nav class="navbar row">
-            <div role="Navigation" class="navbar-header" aria-label="Navigation sur les pages du site">
+            <div role="MenuBar" class="navbar-header" aria-label="Barre du menu du site">
             <a class="navbar-brand" href="index.html"
                 ><img
                 src="img/la-chouette-agence.png"
@@ -39,7 +39,7 @@
                 height="40"
             /></a>
             <button 
-			    aria-roledescription="bouton de navigation sur les pages du site"
+                aria-roledescription="bouton de navigation sur les pages du site"
                 id="nav-toggle"
                 type="button"
                 class="ui-navbar-toggle navbar-toggle"
