--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-        <nav class="navbar row">
-            <div role="MenuBar" class="navbar-header" aria-label="Barre du menu du site">
+        <nav role="NavBar" aria-label="Barre de navigation sur les pages du site" class="navbar row">
+            <div  class="navbar-header">
             <a class="navbar-brand" href="index.html"
                 ><img
                 src="img/la-chouette-agence.png"
