--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-        <nav role="Navigation" aria-label="Barre de navigation sur les pages du site" class="navbar row
+        <nav role="Navigation" aria-label="Barre de navigation sur les pages du site" class="navbar row">
             <div  class="navbar-header">
             <a class="navbar-brand" href="index.html"
                 ><img
