--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-        <nav role="Navigation" aria-label="Barre de navigation sur les pages du site" class="navbar row">
-            <div  class="navbar-header">
-            <a class="navbar-brand" href="index.html"
+        <nav class="navbar row">
+            <div role="Menu" class="navbar-header">
+            <a aria-label="Barre de navigation sur les pages du site" class="navbar-brand" href="index.html"
                 ><img
                 src="img/la-chouette-agence.png"
                 alt="Bannière - La chouette Agence"
