--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <header class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
         <nav class="navbar row">
-            <div role="Menu" class="navbar-header">
+            <div class="navbar-header">
             <a aria-label="Barre de navigation sur les pages du site" class="navbar-brand" href="index.html"
                 ><img
                 src="img/la-chouette-agence.png"
